Fixed misaligned inputs, also trying solution for font script not loading on heroku

--- a/less/main.less
+++ b/less/main.less
@@ -110,3 +110,13 @@ button{
   min-width: fit-content;
   flex-wrap: wrap;
 }
+
+.box {
+  overflow-x: visible;
+}
+
+.box * {
+  overflow-x: visible;
+}
+
+
