--- a/public/index.css
+++ b/public/index.css
@@ -105,6 +105,12 @@ button {
   min-width: fit-content;
   flex-wrap: wrap;
 }
+.box {
+  overflow-x: visible;
+}
+.box * {
+  overflow-x: visible;
+}
 .nav {
   display: flex;
   justify-content: space-between;
